[gd_scene load_steps=2 format=3 uid="uid://0cffmnlq1nvg"]

[ext_resource type="Script" uid="uid://c53a1agbv8pwn" path="res://scenes/lobby.gd" id="1_o1atq"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o1atq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Username:"

[node name="Username" type="TextEdit" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Ip-address:"

[node name="Ip" type="TextEdit" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "localhost"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Port:"

[node name="Port" type="TextEdit" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "9100"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Host" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Host lobby"

[node name="Join" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Join lobby"

[node name="PostServer" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect3" type="ColorRect" parent="PostServer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
color = Color(0.09, 0.09, 0.09, 1)

[node name="Leave" type="Button" parent="PostServer"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -53.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "Leave"

[node name="Start" type="Button" parent="PostServer"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
text = "Start"

[node name="Ready" type="Button" parent="PostServer"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_right = 8.0
grow_vertical = 0
toggle_mode = true
text = "Ready"

[node name="Players" type="VBoxContainer" parent="PostServer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label1" type="Label" parent="PostServer/Players"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="Label2" type="Label" parent="PostServer/Players"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="ColorRect1" type="ColorRect" parent="PostServer"]
layout_mode = 0
offset_left = 221.0
offset_top = 3.0
offset_right = 248.0
offset_bottom = 32.0
color = Color(1, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="PostServer"]
layout_mode = 0
offset_left = 221.0
offset_top = 36.0
offset_right = 248.0
offset_bottom = 65.0
color = Color(1, 0, 0, 1)

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="PostServer/Leave" to="." method="_on_leave_pressed"]
[connection signal="pressed" from="PostServer/Start" to="." method="_on_start_pressed"]
[connection signal="toggled" from="PostServer/Ready" to="." method="_on_ready_toggled"]
